ubiquity (16.10.2) UNRELEASED; urgency=medium

  * scripts/clock-setup-apply: guard against missing rcS file on the rootfs.
    (LP: #1587555)
  * Automatic update of included source packages: apt-setup
    1:0.104ubuntu5, base-installer 1.158ubuntu3, clock-setup
    0.126ubuntu2, console-setup 1.142ubuntu4, netcfg 1.135ubuntu6,
    partconf 1.50, partman-auto-lvm 59ubuntu1, partman-ext3 86ubuntu1,
    partman-lvm 113.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 08 Jun 2016 13:52:12 -0400

ubiquity (16.10.1) yakkety; urgency=medium

  [ Iain Lane ]
  * misc.py: Ask for the 'State' property instead of 'state'. Fixes display
    of wireless page. (LP: #1572793)

  [ Mathieu Trudel-Lapierre ]
  * Abitrary version number change.
  * Move sources to yakkety.
  * Automatic update of included source packages: choose-mirror
    2.65ubuntu7, console-setup 1.142ubuntu1, preseed 1.71ubuntu2.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Fri, 29 Apr 2016 16:28:50 -0400

ubiquity (2.21.63) xenial; urgency=medium

  * Automatic update of included source packages: user-setup
    1.63ubuntu4.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Wed, 20 Apr 2016 12:11:00 -0400

ubiquity (2.21.62) xenial; urgency=medium

  * Automatic update of included source packages: netcfg 1.135ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 20 Apr 2016 13:22:40 +0100

ubiquity (2.21.61) xenial; urgency=medium

  * Automatic update of included source packages: console-setup
    1.108ubuntu15.

 -- Mathieu Trudel-Lapierre <cyphermox@ubuntu.com>  Tue, 19 Apr 2016 21:25:45 -0400

ubiquity (2.21.60) xenial; urgency=medium

  * Automatic update of included source packages: user-setup
    1.63ubuntu3.
  * Don't crash in the Kubuntu prepare page if we're booting in EFI. Try to
    do the right thing in showing password boxes and all the trimmings for
    setting a Mok password, using the already-translated strings we have.
    (LP: #1529450)
