@@ -20,7 +20,6 @@ import time
 from autopilot.input import Pointer, Mouse, Keyboard
 from ubiquity_autopilot_tests.emulators import AutopilotGtkEmulatorBase
 from ubiquity_autopilot_tests.tools.compare import expectThat
-from ubiquity_autopilot_tests.emulators import gtkcontrols, gtkaccessible
 import logging
 logger = logging.getLogger(__name__)
 
