@@ -18,7 +18,6 @@
 from autopilot.input import Pointer, Mouse, Keyboard
 from ubiquity_autopilot_tests.emulators import AutopilotGtkEmulatorBase
 from ubiquity_autopilot_tests.tools.compare import expectThat
-from ubiquity_autopilot_tests.emulators import gtkaccessible
 import logging
 import re
 from collections import namedtuple
