@@ -23,8 +23,6 @@ from ubiquity_autopilot_tests.emulators.partconfig\
     import Config1, Config2, Config3
 from ubiquity_autopilot_tests.emulators.partconfig\
     import Config4, Config5, Config6
-from ubiquity_autopilot_tests.emulators\
-    import gtkcontrols, gtkaccessible, gtkcontainers
 import logging
 logger = logging.getLogger(__name__)
 
